Fixed a few visibility issues.

--- a/src/app/components/shared/sidebar/sidebar.component.css
+++ b/src/app/components/shared/sidebar/sidebar.component.css
@@ -117,6 +117,7 @@
   flex-direction: row;
   align-items: center;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .sidebar-list-item:hover {
